--- a/first.html
+++ b/first.html
@@ -46,6 +46,16 @@
                      <option value="section 1">this is section1</option>
                      <option value="section 2">this is secction2</option>
                      <optionn value="section 3">this is section 3</option>
+                     <span>
+                     </span>
+                     <div></div>
+                     <audio controls>
+                     <source src="" type="audio/mpeg">
+
+                     </audio>
+
+                     </audio>
+
                  </select>
 
                  </form>
