--- a/javascriptex.html
+++ b/javascriptex.html
@@ -4,15 +4,16 @@
 <title>class assignment </title>
 </head>
 <body class="custom">
-<span>R</span>
+<span>J</span>
 <span>A</span>
-<span>G</span>
-<span>H</span>
-<span>U</span>
 <span>V</span>
-<span>E</span>
-<span>E</span>
+<span>A</span>
+<span>S</span>
+<span>C</span>
 <span>R</span>
+<span>I</span>
+<span>P</span>
+<span>T</span>
 <script src="sample.js" type="text/javascript"> </script>
 </body>
 </html>
