--- a/boot1.html
+++ b/boot1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,41 +11,63 @@
 </head>
 <body>
 
-<div class="container">
-  <div class="jumbotron">
+<div class="container" style="width:900px;height:800px">
+  <div class="jumbotron" >
     <img src="sfsu.jpg" width="350" height="100"/>
     <h1>Welcome To San Francisco State!</h1>
     <p>Please Enter Your details to register</p> 
   </div>
-  <form>
-  <div class="form-group">
-    <label for="exampleInputName2">Name</label>
+  <form >
+  <div class="form-group" style="display:inline-block">
+    <label for="exampleInputName2">First Name</label>
     <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+    </div>
+    <div class="form-group" style="display:inline-block">
+    <label for="exampleInputName2">Last Name</label>
+    <input type="text" class="form-control" id="exampleInputName2" placeholder="Richards">
   </div>
-  <div class="form-group">
+  <div class="form-group" style="display:inline-block">
     <label for="exampleInputEmail1">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
   </div>
-  <div class="form-group">
+  <div class="form-group" style="display:inline-block">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
   </div>
-  <div class="form-group">
+  <div class="form-group" style="display:inline-block">
     <label for="exampleInputFile">File input</label>
     <input type="file" id="exampleInputFile">
     <p class="help-block">Example block-level help text here.</p>
   </div>
-  <div class="checkbox">
+  <div class="checkbox" style="display:inline-block">
     <label>
       <input type="checkbox"> Check me out
     </label>
   </div>
-  <textarea class="form-control" rows="3" placeholder="about yourself"></textarea>
-
-  <button type="submit" class="btn btn-default">Submit</button>
+  <textarea class="form-control" rows="3" placeholder="about yourself"></textarea></br>
+  <div class="radio">
+  <label>
+    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+    Male
+  </label>
+</div>
+<div class="radio">
+  <label>
+    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+    Female
+  </label>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputName2">Address</label>
+    <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">
+    </div>
+  <div style="text-align:center">
+  <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
 </form>
   </div>
 </div>
+
 
 </body>
 </html>
